ankiba/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ankiba-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie" # セッション管理
    nginx.ingress.kubernetes.io/limit-rps: "5" # DDOS対策
spec:
  ingressClassName: nginx
  rules:
  - host: ankiba.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-web
            port:
              number: 80
